<resources>
    <string name="app_name">Dusza VersenyPortál</string>
    <string name="landing_page_title">VERSENY JELENTKEZÉSI FELÜLET</string>
    <string name="selector">Válasszon platformot</string>
    <string name="versenyzoi">Versenyzői felület</string>
    <string name="szervezoi">Szervezői felület</string>
    <string name="iskolai">Iskolai felület</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="felulet">felület</string>
    <string name="username">Felhasználónév</string>
    <string name="email">E-mail cím</string>
    <string name="szul_datum">Születési dátum</string>
    <string name="nem">Férfi / Nő</string>
    <string name="szervezoi_kod">Szervezői kód</string>
    <string name="account_exist">Van már fiókod?</string>
    <string name="pleasesignin">Jelentkezz be</string>
    <string name="back">back arrow</string>
    <string name="arrow_description">Vissza</string>
    <string name="nezdmegaz">Nézd meg az</string>
    <string name="emailed">Email-ed\n</string>
    <string name="emailkodtext1">Emailben kaptál egy kódot,</string>
    <string name="emailkodtext2">add meg az alábbi mezőben!</string>
    <string name="kod">Kód</string>
    <string name="submit">Tovább</string>
    <string name="password">Jelszó</string>
    <string name="szervpanel">Szervezői panel</string>
    <string name="Veresenykezeles">Verseny kezelése</string>
    <string name="prognyelv">Programozási nyelvek</string>
    <string name="szervezoi_title">Szervezői</string>
    <string name="versenyzoi_title">Versenyzői</string>
    <string name="teamName">Csapatnév</string>
    <string name="team">team</string>
    <string name="plus">plus</string>
    <string name="addTeamMate">Csapattag Hozzáadása</string>
    <string name="versenyzoName">Versenyző neve</string>
    <string name="versenyzoGrade">Versenyző évfolyama</string>
    <string name="delete_button_description">Törlés</string>
    <string name="katergoria">Kategóriák</string>
    <string name="jelhatido">Jelentkezési Határidő</string>
    <string name="submit_btn">Mentés</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="iskolai_title">Iskolai</string>
    <string name="Iskola">Iskola</string>
    <string name="Iskolalocation">Iskola címe</string>
    <string name="kapcstneve">Kapcsolattartó neve</string>
    <string name="kapcstemail">Kapcsolattartó E-mail-címe</string>
    <string name="kapcstfhneve">Kapcsolattartó felhasználóneve</string>
    <string name="iskolakezeles">Iskolák kezelése</string>
    <string name="iskolareg">Új iskola regisztrálása</string>
</resources>