<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.gubo.duszaverseny.viewModels.EmailVerifyViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/mainEmailVerify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".EmailVerifyActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nezdmegaz"
                android:textColor="@color/primaryVariant"
                android:fontFamily="sans-serif-light"
                android:textSize="42sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailed"
                android:textColor="@color/primaryVariant"
                android:textStyle="bold"
                android:textSize="42sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailkodtext1"
                android:textColor="@color/primaryVariant"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailkodtext2"
                android:textColor="@color/primaryVariant"
                android:textSize="12sp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:background="@drawable/rounded_box_lnr_blue"
            android:orientation="vertical"
            android:gravity="center"
            >

            <com.gubo.duszaverseny.components.whiteCustomEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/kod"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="16dp"
                />

            <com.gubo.duszaverseny.components.whiteCustomButton
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="54dp"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>
    </RelativeLayout>
</layout>