<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VersenyzoiRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_box_lnr_invert">

        <com.gubo.duszaverseny.components.BackButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versenyzoi_title"
            android:textSize="42sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/felulet"
            android:textSize="42sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center"
            android:background="@drawable/rounded_white_button">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/team"
                android:src="@drawable/team"
                android:layout_marginStart="16dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/teamName"
                android:inputType="text"
                android:textAlignment="textStart"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center"
            android:background="@drawable/rounded_white_button">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/email"
                android:src="@drawable/email"
                android:layout_marginStart="16dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="text"
                android:textAlignment="textStart"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teamMateBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="vertical"
            android:padding="12dp"
            android:background="@drawable/rounded_white_button">

            <LinearLayout
                android:id="@+id/addTeamMate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/plus"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/plus" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/hintText"
                    android:text="@string/addTeamMate" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <com.gubo.duszaverseny.components.BlueCustomButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="29dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/account_exist"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:textColor="@color/primaryVariant" />

            <com.gubo.duszaverseny.components.BasicCustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="android:attr/borderlessButtonStyle"
                android:stateListAnimator="@null"
                android:text="@string/pleasesignin"
                android:textColor="@color/primaryVariant" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>