<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.gubo.duszaverseny.viewModels.MainViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryVariant"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="180dp"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/duszalogo"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/landing_page_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:background="@drawable/rounded_box_lnr"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginHorizontal="32dp"
                android:paddingVertical="6dp"
                android:background="@drawable/rounded_white_button"
                android:layout_marginTop="32dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/down_arrow"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/downarrow" />

                <TextView
                    android:id="@+id/selectorText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selector"
                    android:textColor="@color/primaryVariant"
                    android:textSize="26sp"
                    android:gravity="center"
                    android:layout_marginEnd="16dp" />
            </LinearLayout>

            <com.gubo.duszaverseny.components.BlueCustomButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:text="@string/login"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="16dp"
            />

            <com.gubo.duszaverseny.components.BlueCustomButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:text="@string/register"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>