<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/mainIskolaiLogin"
    tools:context=".SzervezoiLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:background="@drawable/rounded_box_lnr_invert"
        android:orientation="vertical">

        <com.gubo.duszaverseny.components.BackButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iskolai_title"
            android:textSize="42sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/felulet"
            android:textSize="42sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center"
            android:background="@drawable/rounded_white_button">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/user"
                android:layout_marginStart="16dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:textAlignment="textStart"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:background="@null" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:layout_marginBottom="36dp"
        >

        <com.gubo.duszaverseny.components.BlueCustomButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginHorizontal="16dp"/>
    </LinearLayout>
</RelativeLayout>